--- a/_posts/music/2017-08-27-ohw.md
+++ b/_posts/music/2017-08-27-ohw.md
@@ -7,10 +7,10 @@ category: audio
 release_type: "OST"
 bandcamp: "http://pantingpanda.bandcamp.com/album/one-hell-of-a-week-ost"
 ---
+>> Credits: Music Composition, Sound Design
 
->> Credits: Music Composition for Levels
+This project was completed over four months, and was a complete blast for me.
+I worked day in and out to get the tracks done, and loved every single minute. The compositions were recorded in the box (aka my bedroom), using industry standard microphones (AT-2050 and SM57), with the evergreen Steinberg 'D-preamp' interface which was also used for percussion samples and electric guitar.
 
-This theme was a blast to work on! My task was to compose songs for different levels and have them weave into each other seamlessly, which I accomplished thanks to Ableton Live, and its wonderfully easy methods to loop.
-
-Throughout the project, my hands were busy programming the synthesizers.
-I chose the synthesizer as it never fails to fit in perfectly with the aesthetics of mobile app games.
+For the SFX, I conducted field recordings for the game and processed them to de-noise, to get a clean sound.
+Further, I combined this with audio synthesis to shape the FX in a full rich sound.
